k8s/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: default
spec:
  ports:
    - port: 4180
      targetPort: 4180
  selector:
    app: oauth2-proxy
  type: ClusterIP
